@startuml Inheritence
'https://plantuml.com/class-diagram

' ========== 基础抽象类 ==========
abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

' ========== 飞机类层次结构 ==========
abstract class AbstractAircraft
{
    # maxHp:int
    # hp:int
    # shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + setShootStrategy(ShootStrategy shootStrategy):void
    + getShootStrategy():ShootStrategy
    + {abstract} shoot():List<BaseBullet>
}

' --- 英雄机（单例模式） ---
class HeroAircraft
{
    - static instance: HeroAircraft
    - shootNum:int
    - power:int
    - direction:int
    - isAlive:boolean
    
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    
    + static getInstance(): HeroAircraft
    + static getInstance(int locationX, int locationY, int speedX, int speedY, int hp): HeroAircraft
    + static resetInstance(): void
    + forward():void
    + shoot():List<BaseBullet>
    + isAlive():boolean
    + revive(int hp):void
}


' --- 敌机抽象类 ---
abstract class AbstractEnemy
{
    # score:int
    + AbstractEnemy(int locationX, int locationY,
     int speedX, int speedY, int hp, int score)
    + getScore():int
}

' --- 具体敌机类 ---
class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - shootFrequency:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class ElitePlusEnemy {
    - shootFrequency:int
    - power:int
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteProEnemy {
    - shootFrequency:int
    - power:int
    - specialAbility:boolean
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + activateSpecialAbility():void
}

class BossEnemy {
    - shootFrequency:int
    - power:int
    - phase:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + changePhase(int newPhase):void
}

' ========== 道具类层次结构 ==========
abstract class AbstractProp {
    # effectDuration:int
    + AbstractProp(int locationX, int locationY, int speedX, int speedY, int effectDuration)
    + forward():void
    + {abstract} activate():void
    + getEffectDuration():int
    + setEffectDuration(int effectDuration):void
}

' --- 具体道具类 ---
class BloodProp {
    - healAmount:int
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + activate():void
}

class FireProp {
    - powerBoost:int
    + FireProp(int locationX, int locationY, int speedX, int speedY)
    + activate():void
}

class FirePlusProp {
    - powerBoost:int
    - duration:int
    + FirePlusProp(int locationX, int locationY, int speedX, int speedY)
    + activate():void
}

class FreezeProp {
    - freezeDuration:int
    + FreezeProp(int locationX, int locationY, int speedX, int speedY)
    + activate():void
}

class BombProp {
    - explosionRadius:int
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + activate():void
}

' ========== 子弹类层次结构 ==========
abstract class BaseBullet {
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

' ========== 继承关系 ==========
' 飞机类继承关系
AbstractFlyingObject <|-- AbstractAircraft
AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- AbstractEnemy
AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- ElitePlusEnemy
AbstractEnemy <|-- EliteProEnemy
AbstractEnemy <|-- BossEnemy

' 道具类继承关系
AbstractFlyingObject <|-- AbstractProp
AbstractProp <|-- BloodProp
AbstractProp <|-- FireProp
AbstractProp <|-- FirePlusProp
AbstractProp <|-- FreezeProp
AbstractProp <|-- BombProp

' 子弹类继承关系
AbstractFlyingObject <|-- BaseBullet
BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

@enduml
